test/expected/declare_exsi.out
declare x as exported static int x
        ^
9: error: "exported static int" is illegal for built-in type
